# nft_sets

./: .gitignore  README.md  example.config.json  pyproject.toml
assets/: template.xcf
nftsets/: __main__.py  composite.py  config.py  image_sets.py
